<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StuffEditFragment">

    <EditText
        android:id="@+id/editItemListName"
        android:hint="@string/hint_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editItemList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/editAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/editItemDiscard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"/>

</LinearLayout>