<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MatchCreationFragment">

    <TextView
        android:id="@+id/assigneeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignees" />

    <Spinner
        android:id="@+id/assigneeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/assignments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"/>
    <!--clicking button leads to the edit page.
    If we want to allow reroll matches will need to include list ids -->

    <!--Add option to add new list -->
</LinearLayout>